welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: identifier expected but 'final' found.
	def final():Boolean = {
            ^