welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def final():Boolean = {
		if(estfaceMur  ) {
		getDirection()
		if (getDirection()==direction.EST){
			gauche() 
			if(estFaceMur) { return true }
			else { return false}
		}
		else { droite()
		if(estFaceMur) { return true }
		else {return false}
		}
	}
}
}
